# inversion-sst-gp

./: .gitignore  README.md  pyproject.toml
1_preproc_data/: 1_1_preproc_himawari_9_sst.py  1_1_preproc_suntans_data.py  1_2_preproc_himawari_9_sst.py  1_2_preproc_suntans_data.ipynb  1_2_preproc_suntans_data.py  1_3_preproc_altimeter_ssc.ipynb  1_3_preproc_altimeter_ssc.py  README.md  README.txt
2_covariance_parameter_estimation/: 2_1_optimize_osse_per_process.py  2_2_run_multi_optimize_osse.py  2_2_run_multi_optimize_osse.sh  2_3_run_multi_optimize_satellite.py  2_3_run_multi_optimize_satellite.sh  2_4_merge_outputs.py  README.md
3_observing_system_simulation_experiment/: 3_1_individual_cases.ipynb  3_1_individual_cases.py  3_2_evaluation_metrics.ipynb  3_2_evaluation_metrics.py
4_satellite_application/: 4_1_case_1_rossby_number.ipynb  4_1_case_1_rossby_number.py  4_1_small_cloud_and_rossby_number.ipynb  4_2_case_2_particle_tracking.ipynb  4_2_case_2_particle_tracking.py  4_2_large_cloud_and_particle_tracking.ipynb
data/: altimeter_currents.nc  himawari.nc  suntans_dense_cloud.nc  suntans_measurement_error.nc  suntans_sparse_cloud.nc
notebooks/: 1_osse_individual_cases.ipynb  3_satellite_application.ipynb
outputs/: cloud_dense_gp_num_t.csv  cloud_dense_gp_obs_t.csv  cloud_sparse_gp_num_t.csv  cloud_sparse_gp_obs_t.csv  noise_gos_t.csv  noise_gp_num_t.csv  noise_gp_obs_t.csv  satellite_gp_obs_t.csv  time_1h_gos_t.csv  time_1h_gp_num_t.csv  time_1h_gp_num_t1.csv  time_1h_gp_obs_t.csv  time_24h_gos_t.csv  time_24h_gp_num_t.csv  time_24h_gp_num_t1.csv  (+1 more)
(+46 files in other folders)
