[tool.poetry]
name = "inversion-sst-gp"
version = "0.1.0"
description = ""
authors = ["Rick de Kreij <r.d.kreij@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "inversion_sst_gp", from = "pkg" }]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = ">=2.2.5,<3.0.0"
xarray = ">=2025.4.0,<2026.0.0"
matplotlib = ">=3.10.3,<4.0.0"
pandas = ">=2.2.3,<3.0.0"
netcdf4 = ">=1.7.2,<2.0.0"
geographiclib = ">=2.0,<3.0"
cmocean = ">=4.0.3,<5.0.0"
scipy = ">=1.15.3,<2.0.0"
colorcet = ">=3.1.0,<4.0.0"
dask = "^2025.5.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
